sj01_modify menubar

--- a/frame/menu.html
+++ b/frame/menu.html
@@ -1,8 +1,10 @@
 <div>
   <form action="#">
     <a href="../index.html" target="main"><img src="../img/logo.jpg" height="25px"></a>
+    <span name="white_area">&nbsp;&nbsp;&nbsp;</span>
     <input type="search" name="searchbar" id="searchbar" placeholder="Search for artist, bands, tarcks...">
     <input type="submit" name="btn_search" id="btn_search" value="검색">
+    <span name="white_area">&nbsp;&nbsp;&nbsp;</span>
     <a href="../page/login_page.html" target="main">Log in</a>
     <a href="../page/signup_page.html" target="main">Sign up</a>
   </form>
