sj01_add layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
+    <iframe src="./frame/menu.html" frameborder="0" width="100%"></iframe>
+  </header>
+  <main>
+    
+  </main>
+  <footer>
+    <iframe src="./frame/footer.html" frameborder="0" width="100%"></iframe>
+  </footer>
 </body>
 </html>
