--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sound Cloud</title>
 </head>
 <body>
-  
+  <div class="header-page">
+    <iframe 
+      src="page/navigator.html" 
+      frameborder="0"
+      width="500px"
+      height="70px">
+    </iframe>
+  </div>
+
+  <div class="main-page">
+    <iframe 
+      src="page/home.html"
+      frameborder="0"
+      width="1500px"
+      height="700px"
+      name="display"></iframe>
+  </div>
+
+  <div class="footer-page">
+    <iframe src="page/footer.html" frameborder="0"></iframe>
+  </div>
 </body>
 </html>
