update menu sign_up

--- a/frame/menu.html
+++ b/frame/menu.html
@@ -6,6 +6,6 @@
     <input type="submit" name="btn_search" id="btn_search" value="검색">
     <span name="white_area">&nbsp;&nbsp;&nbsp;</span>
     <a href="../page/login_page.html" target="main">Log in</a>
-    <a href="../page/signup_page.html" target="main">Sign up</a>
+    <a href="../page/sign_up.html" target="main">Sign up</a>
   </form>
 </div>
