--- a/index.html
+++ b/index.html
@@ -6,15 +6,25 @@
   <title>Sound Cloud</title>
 </head>
 <body>
-  <img src="./img/love.jpg" alt="image" width="25%">
-  <header>
-    <iframe src="./frame/menu.html" frameborder="0" width="100%"></iframe>
-  </header>
-  <main>
+    <div class="header-page">
+      <iframe 
+        src="./frame/menu.html" 
+        frameborder="0" 
+        width="1000px"
+        height="70px">
+      </iframe>
+    </div>
     
-  </main>
-  <footer>
-    <iframe src="./frame/footer.html" frameborder="0" width="100%"></iframe>
-  </footer>
+    <div class="main-page">
+      <iframe 
+        src="./page/home.html" 
+        frameborder="0" 
+        width="1500px"
+        height="500px">
+      </iframe>
+    </div>
+    <div class="footer-page">
+      <iframe src="./frame/footer.html" frameborder="0" width="100%"></iframe>
+    </div>
 </body>
 </html>
